--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
  <body>
         <h3>这是第一步，从GitHub上建立一个初步网站</h3>
+        <a href="https://lian11278.github.io/xiaoyu/">点击跳转</a>
  </body>
 </html>
