--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
  <body>
         <h3>这是第一步，从GitHub上建立一个初步网站</h3>
-        <a href="https://lian11278.github.io/xiaoyu/">点击跳转</a>
+        <a href="https://www.bing.com/search?q=%E4%B8%96%E7%95%8C%E4%B8%8A%E8%B0%81%E6%9C%80%E5%B8%85&qs=n&form=QBRE&sp=-1&lq=0&pq=%E4%B8%96%E7%95%8C%E4%B8%8A%E8%B0%81%E6%9C%80%E5%B8%85&sc=9-6&sk=&cvid=4717B072CA8B461C80F8579382E9FA54&ghsh=0&ghacc=0&ghpl=">点击跳转</a>
  </body>
 </html>
